# todolist

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  SQL.md  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
config/: settings.py  urls.py
static/css/: app.css
tasks/: admin.py  forms.py  models.py  services.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html
templates/account/: base.html  login.html  logout.html  signup.html
templates/tasks/: _project_card.html  _project_create_form.html  _project_edit_form.html  _project_header.html  _quick_task_form.html  _task_edit_form.html  _task_row.html  project_list.html
tests/: conftest.py  factories.py  test_forms.py  test_models.py  test_services.py  test_views.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
